# tvbk

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Makefile  README.md  conn.c  gha-helper.py  gha.yml  matmul.c  ode.c  pyproject.toml  r123.cpp  spack.yaml  test.c  tests.py  tvb_kernels.py  util.h
.github/workflows/: wheels.yml
src/: nanobound.cpp  ops.c  r123.cpp
tests/: test_kernels.py
tvb_kernels/: __init__.py  test_kernels.py
