[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "tvb_kernels"
description = "TVB computational kernels"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Marmaduke Woodman", email = "marmaduke.woodman@univ-amu.fr" },
]
classifiers = [ "License :: BSD", ]
dependencies = [ "numpy", "scipy" ]
version = "v0.5"

[project.urls]
Homepage = "https://github.com/the-virtual-brain/tvb-root"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"
# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"
# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.cibuildwheel]
build-verbosity = 1
test-command = "cd {project}/tests; pytest"
test-requires = "pytest"
skip = ["pp*"] # don't build pypy wheels
archs = ["auto"]
